Added restart button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="main.js" defer></script>
 </head>
 <body>
+  <!--Container for tic-tac-toe game board-->
   <div class="boardContainer">
     <div class="cell"></div>
     <div class="cell"></div>
@@ -18,7 +19,15 @@
     <div class="cell"></div>
     <div class="cell"></div>
     <div class="cell"></div>
+  </div>
+<div class="declareWinner">
+  <div class="declareWinnerText">FOOS</div>
 </div>
+<div class="restartButton">
+  <button>Restart</button>
+</div>
+
+
 
 </body>
 </html>
