--- a/index.html
+++ b/index.html
@@ -8,26 +8,24 @@
   <script src="main.js" defer></script>
 </head>
 <body>
+  <div class="declareWinner">
+    <div class="declareWinnerText">FOOS</div>
+  </div>
   <!--Container for tic-tac-toe game board-->
   <div class="boardContainer">
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
+    <div class="cell div1"></div>
+    <div class="cell div2"></div>
+    <div class="cell div3"></div>
+    <div class="cell div4"></div>
+    <div class="cell div5"></div>
+    <div class="cell div6"></div>
+    <div class="cell div7"></div>
+    <div class="cell div8"></div>
+    <div class="cell div9"></div>
   </div>
-<div class="declareWinner">
-  <div class="declareWinnerText">FOOS</div>
-</div>
 <div class="restartButton">
   <button>Restart</button>
 </div>
-
-
 
 </body>
 </html>
