Containerized code into IIFEs

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
   <script src="main.js" defer></script>
 </head>
 <body>
+  <!--Div for containing winning message-->
   <div class="declareWinner">
-    <div class="declareWinnerText">FOOS</div>
+    <div class="declareWinnerText"></div>
   </div>
+
   <!--Container for tic-tac-toe game board-->
   <div class="boardContainer">
     <div class="cell div1"></div>
