--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tic-Tac-Toe</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer></script>
-</head>
-<body>
-  <!--Div for containing winning message-->
-  <div class="declareWinner">
-    <div class="declareWinnerText"></div>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
+  </head>
+  <body>
+    <!--Div for containing winning message-->
+    <div class="declareWinner">
+      <div class="declareWinnerText"></div>
+    </div>
 
-  <!--Container for tic-tac-toe game board-->
-  <div class="boardContainer">
-    <div class="cell div1"></div>
-    <div class="cell div2"></div>
-    <div class="cell div3"></div>
-    <div class="cell div4"></div>
-    <div class="cell div5"></div>
-    <div class="cell div6"></div>
-    <div class="cell div7"></div>
-    <div class="cell div8"></div>
-    <div class="cell div9"></div>
-  </div>
-<div class="restartButton">
-  <button>Restart</button>
-</div>
-
-</body>
+    <!--Container for tic-tac-toe game board-->
+    <div class="boardContainer">
+      <div class="cell div1"></div>
+      <div class="cell div2"></div>
+      <div class="cell div3"></div>
+      <div class="cell div4"></div>
+      <div class="cell div5"></div>
+      <div class="cell div6"></div>
+      <div class="cell div7"></div>
+      <div class="cell div8"></div>
+      <div class="cell div9"></div>
+    </div>
+    <div class="restartButton">
+      <button>Restart</button>
+    </div>
+    <div></div>
+  </body>
 </html>
